--- a/Zwartewaterklooster.mw
+++ b/Zwartewaterklooster.mw
@@ -2,7 +2,7 @@
 't '''Zwartewaterklooster''' was een in 1233 esticht [[Benedictienen|Benedictiener]] vrouwenklooster ten noorden van [[Asselt]] in 't [[Oaversticht]], tègenwoordig de pervincie [[Oaveriessel]]. In of bi'j 't klooster, det eerst ''Mons Sanctae Mariae'' oftewal ''Mariënbarg'' hietten, lag een groot antal mansluden begraven die onder de [[Sticht Utrecht|bisschop van Utrecht]] evochten hadden en in 't Oaversticht esneuveld waren. Ok de namen ''Insula Dei'' en ''Insula beate Marie'' waren veur 't klooster in umloop. De name ''Zwartewaterklooster'' kump van de ligging naobi'j de revier 't [[Zwärte Wäter|Zwarte Water]].
 
 ==Begraafplaatse==
-De kloostergronden waren de leste röstplekke van verscheiden ridders die ummekomen waren in de [[Slag bi'j Aone]] (1227), 't heugtepunt van de machtsstried tussen de bisschop van Utrecht [[Otto II can Lippe]] mit zien kompanen en de [[Coevern|Coevernse]] kestielheer [[Roelfe II van Coevern]]. Dizze leste had mit een leger Drèentse mansluden en vrouwluden 't bischoppelijke leger 't moeras de Mommeriete bi'j Hardenbarg in elokt; de peerden zakten weg en de bisschop mit een bulte ridders wördden of-eslacht. Heur lieken bint vermoedelijk in platbodems oaver de [[Vechte]] naor de plekke naobi'j de reviermonding ebrocht daoras [[Willeband van Oldenbörg]], de opvolger van de sneuvelde bisschop Otto, 't klooster leut oprichten. De gesneuvelden mussen dagens deur de nonnen, daoras d'r oorspronkelijk twintig van waren, herdacht wörden in 't koorgebed.
+De kloostergronden waren de leste röstplekke van verscheiden ridders die ummekomen waren in de [[Slag bi'j Aone]] (1227), 't heugtepunt van de machtsstried tussen de bisschop van Utrecht [[Otto II can Lippe]] mit zien kompanen en de [[Coevern|Coevernse]] kestielheer [[Roelfe II van Coevern]]. Dizze leste had mit een leger Drèentse mansluden en vrouwluden 't bischoppelijke leger 't moeras de [[Mommeriete]] bi'j Hardenbarg in elokt; de peerden zakten weg en de bisschop mit een bulte ridders wördden of-eslacht. Heur lieken bint vermoedelijk in platbodems oaver de [[Vechte]] naor de plekke naobi'j de reviermonding ebrocht daoras [[Willeband van Oldenbörg]], de opvolger van de sneuvelde bisschop Otto, 't klooster leut oprichten. De gesneuvelden mussen dagens deur de nonnen, daoras d'r oorspronkelijk twintig van waren, herdacht wörden in 't koorgebed.
 
 ==Orgenisaotie==
 De stichting van 't klooster gef an det ze in de [[13e eeuw|13e ieuw]] al aordig waren evörderd mit 't in cultuur brengen van 't laand daor. Een klooster kwaamp mit zien orgenisaotievermogen, centeri'je, technische kennis en beheersing van 't schrift ok mooi van passe bi'j 't uutvoeren van waterhuusholdelijke prejecten.
