--- a/Roelfe_II_van_Coevern.mw
+++ b/Roelfe_II_van_Coevern.mw
@@ -1,4 +1,4 @@
-'''Roelfe II van Coevern''' ([[Coevern]], 1192 - [[Hardenbarg (stad)|Hardenbarg]], 25 juli 1230) was börggraaf van Coevern en [[scholte]] van [[Drenthe]]. Hij voerde de Drenten an in de [[Slag bi'j Aone|Slag bij Aone]], waor as ze de aoverwinning behaalden op de [[Sticht Utrecht|bisschop van Utrecht]], [[Otto van Lippe]]. Bij dizze slag kwaamp de bisschop um 't leven in 't moeras de Mommeriete.
+'''Roelfe II van Coevern''' ([[Coevern]], 1192 - [[Hardenbarg (stad)|Hardenbarg]], 25 juli 1230) was börggraaf van Coevern en [[scholte]] van [[Drenthe]]. Hij voerde de Drenten an in de [[Slag bi'j Aone|Slag bij Aone]], waor as ze de aoverwinning behaalden op de [[Sticht Utrecht|bisschop van Utrecht]], [[Otto van Lippe]]. Bij dizze slag kwaamp de bisschop um 't leven in 't moeras de [[Mommeriete]].
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Drèents]].}}
 
