*Empty MediaWiki Message*

--- a/Zwartewaterklooster.mw
+++ b/Zwartewaterklooster.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Location Zwarte Water.PNG|thumb|'t Zwartewaterklooster lag naobi'j 't Zwarte Water. Op de kaorte ziej waor de revier deur 't tègenwoordige Oaveriessel stroomt.]]
+[[Ofbeelding:Location Zwarte Water.PNG|thumb|'t Zwartewaterklooster lag naobi'j 't Zwarte Water. Op de kaorte ziej waor de revier deur 't tègenwoordige Oaveriessel streump.]]
 't '''Zwartewaterklooster''' was een in 1233 esticht [[Benedictienen|Benedictiener]] vrouwenklooster ten noorden van [[Asselt]] in 't [[Oaversticht]], tègenwoordig de pervincie [[Oaveriessel]]. In of bi'j 't klooster, det eerst ''Mons Sanctae Mariae'' oftewal ''Mariënbarg'' hietten, lag een groot antal mansluden begraven die onder de [[Sticht Utrecht|bisschop van Utrecht]] evochten hadden en in 't Oaversticht esneuveld waren. Ok de namen ''Insula Dei'' en ''Insula beate Marie'' waren veur 't klooster in umloop. De name ''Zwartewaterklooster'' kump van de ligging naobi'j de revier 't [[Zwärte Wäter|Zwarte Water]].
 
 ==Begraafplaatse==
