*Empty MediaWiki Message*

--- a/No_More_Tears_(nommer_van_Ozzy_Osbourne).mw
+++ b/No_More_Tears_(nommer_van_Ozzy_Osbourne).mw
@@ -20,3 +20,5 @@ In de hitliesten stund et nommer in de [[Nederlaandse Top 40]] op plek nommer 17
 
 {{Dialekt|sdz}}
 [[Kategorie:muziek]]
+[[Kategorie:Heavy Metal]]
+[[Kategorie:Hard Rock]]
