*Empty MediaWiki Message*

--- a/Shout_(Tears_for_Fears).mw
+++ b/Shout_(Tears_for_Fears).mw
@@ -73,3 +73,5 @@ Er wördt väke edacht det et nommer te maken hef met therapie waoras ie oe gevo
 
 {{Dialekt|sdz}}
 [[Kategorie:Muziek]]
+[[Kategorie:New Wave]]
+[[Kategorie:Synthpop]]
