*Empty MediaWiki Message*

--- a/Big_Log.mw
+++ b/Big_Log.mw
@@ -1,4 +1,4 @@
-'''Big Log''' is een nommer ezungen deur de Britse zanger [[Robert Plant]]. Het nommer is in juli [[1983]] uut egeaven as eerste single van et album ''[[The Principle of Moments]]''. 
+'''Big Log''' is een nommer ezungen deur de Britse zanger [[Robert Plant]] en beheurt töt de [[bluesrock]]/[[poprock]]. Het nommer is in juli [[1983]] uut egeaven as eerste single van et album ''[[The Principle of Moments]]''. 
 
 Samen met [[Robbie Blunt]] en [[Gerald Woodroffe]] hef Plant dit nommer eskreaven. Het was zien eerste succesvölle hit in zien solocarrière sunds hi'j uut [[Led Zeppelin]] is vot egaon. De videoclip van et nommer is in [[Nevada]] en [[Californië]] op enömmen. Het nommer is ook in et videospöl [[Grand Theft Auto V]] (GTA V) te vinden.
 
