--- a/Big_Log.mw
+++ b/Big_Log.mw
@@ -79,3 +79,6 @@ Samen met [[Robbie Blunt]] en [[Gerald Woodroffe]] hef Plant dit nommer eskreave
 {{Dialekt|sdz}}
 
 [[Kategorie:Lied]]
+[[Kategorie:Muziek]]
+[[Kategorie:Poprock]]
+[[Kategorie:Bluesrock]]
