*Empty MediaWiki Message*

--- a/Shout_(Tears_for_Fears).mw
+++ b/Shout_(Tears_for_Fears).mw
@@ -75,3 +75,4 @@ Er wördt väke edacht det et nommer te maken hef met therapie waoras ie oe gevo
 [[Kategorie:Muziek]]
 [[Kategorie:New Wave]]
 [[Kategorie:Synthpop]]
+[[Kategorie:Lied]]
