*Empty MediaWiki Message*

--- a/Op_fietse.mw
+++ b/Op_fietse.mw
@@ -1,4 +1,4 @@
-'''''Op fietse''''' is een liedtie van de [[Drenthe|Drèentse]] meziekgroep [[Skik]] en is schreem deur veurman [[Daniël Lohues]]. Het stiet op de cd ''Niks is zoas 't lek'' uut [[1997]]. Het is op [[1 november]] van dat joar op singel uutbracht en stun zeum weken in de Nederlandse Top 40. As bonus stun der ''Benidaorumme'' op dat ze schreem hadden tiedens de uutzending van de ''Arbeidsvitaminentour'' in Spanje.
+'''''Op fietse''''' is een liedtie van de [[Drenthe|Drèentse]] meziekgroep [[Skik]] en is schreem deur veurman [[Daniël Lohues]]. Het stiet op de cd ''Niks is zoas 't lek'' uut [[1997]]. Het is op [[1 november]] van dat joar op singel uutbracht en stun zeum weken in de Nederlandse Top 40 met as piek plak nommer 29. As bonus stun der ''Benidaorumme'' op dat ze schreem hadden tiedens de uutzending van de ''Arbeidsvitaminentour'' in Spanje.
 
 In 2005 wuur ''Op fietse'' keuzen tot het beste Drentse liedtie allertieden. Sinds 2003 komp het ok veur in de Nederlandse Radio 2 Top 2000. De tot nou toe (2011) hoogste plaats haalde het in 2009 toen het op plaats 181 stun.
 
