*Empty MediaWiki Message*

--- a/Beats_per_minute.mw
+++ b/Beats_per_minute.mw
@@ -1,4 +1,4 @@
-'''Beats per minute''' (BPM) of '''slaagn per minute''' is nen term in de muziek den at angef wo vlot (of laankzaam) n muziekstuk espöld mut wordn. Dit steet meesstieds boawnan op t muziekstuk.
+'''Beats per minute''' (BPM) of '''slaagn per minuut''' is nen term in de muziek den at angef wo vlot (of laankzaam) n muziekstuk espöld mut wordn. Dit steet meesstieds boawnan op t muziekstuk.
 
 Te mear slaagn a'j in de minute hebt, des te sneller a'j t spöln mutn. Op 60 BPM is dus iedere sekonde nen tel (froai laankzaam). Op 120 BPM mu'j vuur iedere sekonde twee slaagn teln. 120BPM wörd bie [[muziekkorps]]en ook wal marstempo eneumd.
 
