−[[Kategorie:Muziek]]; ±[[Kategorie:New Wave]]→[[Kategorie:New wave]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Shout_(Tears_for_Fears).mw
+++ b/Shout_(Tears_for_Fears).mw
@@ -72,7 +72,6 @@ Er wördt väke edacht det et nommer te maken hef met therapie waoras ie oe gevo
 <references/>
 
 {{Dialekt|sdz}}
-[[Kategorie:Muziek]]
-[[Kategorie:New Wave]]
+[[Kategorie:New wave]]
 [[Kategorie:Synthpop]]
 [[Kategorie:Lied]]
