−[[Kategorie:Muziek]]; ±[[Kategorie:Heavy Metal]]→[[Kategorie:Heavy metal]]; ±[[Kategorie:Hard Rock]]→[[Kategorie:Hard rock]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/No_More_Tears_(nommer_van_Ozzy_Osbourne).mw
+++ b/No_More_Tears_(nommer_van_Ozzy_Osbourne).mw
@@ -19,7 +19,6 @@ In de hitliesten stund et nommer in de [[Nederlaandse Top 40]] op plek nommer 17
 |}
 
 {{Dialekt|sdz}}
-[[Kategorie:muziek]]
-[[Kategorie:Heavy Metal]]
-[[Kategorie:Hard Rock]]
+[[Kategorie:Heavy metal]]
+[[Kategorie:Hard rock]]
 [[Kategorie:Lied]]
