--- a/Oldewater.mw
+++ b/Oldewater.mw
@@ -57,3 +57,4 @@ Ofbeelding:Oudewater 223.jpg|De Woage
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Gemeente in Utrecht]]
 [[Kategorie:Plaots in Utrecht]]
+[[Kategorie:Vroggere gemaente in Zuud-Hollaand]]
