--- a/Selderie.mw
+++ b/Selderie.mw
@@ -1,11 +1,11 @@
 [[ofbeelding:Knolselderij plant (Apium graveolens var. rapaceum) 'Dolvi'.jpg|thumb|300px|Knolselderie (Apium graveolens var. rapaceum) 'Dolvi']]
-'''Selderie''' (''Apium graveolens'') is een plant uut de [[Schärmbloemenfemilie]] (''Apiaceae'' of ''Umbelliferae''). De plant stiet op de [[Nederlaandse Rode Lieste 2012 (planten)|Nederlaandse Rode Lieste]] as aorig zelsem en as slim of enömmen in et wild. In et wild kump de plant veur langs de kuste waoras et nat is met zilte töt brakke gronden. De plant kump ok mangs veur langs sloten.
+'''Selderie''' (''Apium graveolens'') is een plant uut de [[Schärmbloemenfemilie]] (''Apiaceae'' of ''Umbelliferae''). De plante stiet op de [[Nederlaandse Rode Lieste 2012 (planten)|Nederlaandse Rode Lieste]] as aorig zelsem en as slim of enömmen in et wild. In et wild kump de plant veur langs de kuste waoras et nat is met zilte töt brakke gronden. De plante kump mangs ok veur langs sloten.
 
-Verschillende varianten van selderie wördt gebruukt deur meansen. Dit bint [[bladselderie]] (''Apium graveolens'' var. ''secalinum''), [[bleekselderie]] (''A. graveolens'' var. ''dulce'') en [[knolselderie]] (''A. graveolens'' var. ''rapaceum''). Van zowel bleekselderie as bladselderie wördt de bladstelen egetten, van bladselderie ook de blader. Van knolselderie wördt de knolle egetten die körtbi'j boaven de grond gruuit. Ook de ni'je jonge blader van knolselderie bint goed op te etten. Van alle drie de vörmen wördt ook soep emaakt.
+Verschillende varianten van selderie wördt gebruukt deur meansen. Dit bint [[bladselderie]] (''Apium graveolens'' var. ''secalinum''), [[bleekselderie]] (''A. graveolens'' var. ''dulce'') en [[knolselderie]] (''A. graveolens'' var. ''rapaceum''). Van zowel bleekselderie as bladselderie wördt de bladstelen egetten, van bladselderie ook de blader. Van knolselderie wördt de knolle egetten die körtbi'j boaven de grond gruuit. Ook de ni'je jonge blader van knolselderie bint goed te etten. Van alle drie de vörmen wördt ook soep emaakt.
 
 Van de meansen die [[voedselallergie]] hebt kump die veur selderie vrie väke veur.
 
-In de [[Oldheid]] had ze de [[selderiekrans]] als pries van de [[Nemeïsche Spelen]] ter ere van [[Zeus]].
+In de [[Oldheid]] had ze de [[selderiekrans]] als pries van de [[Nemeïsche Spöllen]] ter ere van [[Zeus]].
 
 == Ook bekieken ==
 
