--- a/Maarten_Luther.mw
+++ b/Maarten_Luther.mw
@@ -38,6 +38,7 @@ Hyr et lysyn wat Luther up estelled hadde teagen de jöäden, oaver enöämen ü
 
 {{Dialekt|sdz|[[Vechte|'t Vechtdal]]|Algemene Nedersaksiese Schriefwieze}}
 
+{{DEFAULTSORT:Luther, Maarten}}
 [[Kategorie:Protestantisme]]
 [[Kategorie:Theoloog]]
 [[Kategorie:Duutslaand]]
