[[:Kategorie:Sporter oet o]] weg-ehaald; [[:Kategorie:Sporter oet Oaveriessel]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Kyra_Lamberink.mw
+++ b/Kyra_Lamberink.mw
@@ -3,4 +3,4 @@
 {{Dialekt|sdz||Algemene Nedersaksiese Schriefwieze}}
 
 {{DEFAULTSORT:Lamberink, Kyra}}
-[[Kategorie:Sporter oet o]]
+[[Kategorie:Sporter oet Oaveriessel]]
