--- a/Tristan_Hoffman.mw
+++ b/Tristan_Hoffman.mw
@@ -25,6 +25,7 @@ Enkele van ziene risseltoaten:
 2004
 * 2den in Paries-Roubaix
 
+{{DEFAULTSORT:Hoffman, Tristan}}
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Sporter uut Gelderlaand]]
 [[Kategorie:Wielrennen]]
