--- a/Loes_Gunnewijk.mw
+++ b/Loes_Gunnewijk.mw
@@ -5,6 +5,7 @@ Zee is sund 2002 prof, op de weg, op de [[baanwielrennen|bane]] en in t [[veeldr
 
 Verskeidene maolen hef Gunnewijk bi'j NKs op t podium estaone. In 2006  worden ze Nederlaands kampioen en studenten-weerldkampioen in t tiedrieden. In 2010 behaalden ze den nationalen titel veur t wegwielrennen. Ok in 2010 won zee de [[Ronde van Drenthe]].
 
+{{DEFAULTSORT:Gunnewijk, Loes}}
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Sporter uut Gelderlaand]]
 [[Kategorie:Wielrennen]]
