Sortering van [[:Kategorie:Skaatsen]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Scheuvellopen.mw
+++ b/Scheuvellopen.mw
@@ -47,4 +47,4 @@ In Nederlaand deuden alle bevolkingsklassen an scheuvellopen, zoas blek uut schi
 {{Dia|Dit artikel is eschreven in 't [[Zuudwest-Drèents]].}}
 
 [[Kategorie:Drèents artikel]]
-[[Kategorie:Skaatsen]]
+[[Kategorie:Skaatsen| ]]
