--- a/Annie_Borckink.mw
+++ b/Annie_Borckink.mw
@@ -5,6 +5,7 @@ Dat joar wodden zee verkoazen tot sportvrouwe van het joar.
 
 {{Begin|act}}
 
+{{DEFAULTSORT:Borckink, Annie}}
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Sporter uut Gelderlaand]]
 [[Kategorie:Skaatsen]]
