--- a/Annie_Borckink.mw
+++ b/Annie_Borckink.mw
@@ -1,7 +1,7 @@
 [[File:Vanavond is in Amersfoort de sportman en sportvrouw van 1 gekozen, sportvrouw is, Bestanddeelnr 931-2469.jpg|thumb|200px|Annie Borckink.jpg]]
-'''Anna Johanna Geertruida Maria (Annie) Borckink''' ([[Hupsel]], [[17 oktober]] [[1951]]) is ne olympische kampioene op de 1500 meter skaatsen in [[Lake Placid]] (1980).
+'''Anna Johanna Geertruida Maria (Annie) Borckink''' ([[Hupsel]], [[17 oktober]] [[1951]]) is ne olympiske kampioone up de 1500 meter skaatsen in [[Lake Placid]] ([[1980]]).
 
-Dat joar wodden zee verkoazen tot sportvrouwe van het joar.
+Dat jår wordden see verkösen tot sportvrouwe van et jår.
 
 {{Begin|act}}
 
