--- a/Salacious_Gods.mw
+++ b/Salacious_Gods.mw
@@ -14,7 +14,7 @@ Salacious Gods besteet seend [[1994]] en hef de volgende leedn:
 *''Piene'' ([[2005]])
 
 ==Oetgoande verbeending==
-[http://www.myspace.com/salaciousgods Öare stea op Myspace]
+[http://www.myspace.com/salaciousgods Öare stea op Myspace] en [https://www.facebook.com/Salacious-Gods-191247110953429/ Facebook].
 
 <references/>
 
