/* Uutgaonde verwiezingen */ dode links verwijderd

--- a/Witte_wieven.mw
+++ b/Witte_wieven.mw
@@ -52,11 +52,8 @@ Roend middernacht klinkt klokgeluui deur de bos. 't Is ofkomstig van een al verz
 *[[Westerwoolds]]: ''weite wieven''
 *[[Vechte|'t Vechtdal]]: ''witte wie-m''
 
-==Uutgaonde verwiezingen==
-*[http://www.meertens.knaw.nl/volksverhalenbank/lijst_lexicon.php?act=detail&volksverhaal_type=SINSAG%200162 Witte wieven volgens 't Meertens Instituut]
+==Uutgaonde verwiezing==
 *[http://www.meteo-maarssen.nl/sage_004.html Sages over de witte wieven]
-*[http://www.klap.net/verhalen/wittewieven.html De legende van de witte wieven]
-*[http://www.zwiep.dds.nl/fotos/zwiepseboli_800.jpg Foto van een wit wief in Zwiep]
 
 {{Dia|Disse pagina is eschreven in 't [[Putters]]}}
 
