syn archieven van

--- a/Witte_wieven.mw
+++ b/Witte_wieven.mw
@@ -52,12 +52,14 @@ Roend middernacht klinkt klokgeluui deur de bos. 't Is ofkomstig van een al verz
 *[[Westerwoolds]]: ''weite wieven''
 *[[Vechte|'t Vechtdal]]: ''witte wie-m''
 
-==Uutgaonde verwiezing==
+==Uutgaonde verwiezingen==
+*[https://web.archive.org/web/20070609153235/https://www.meertens.knaw.nl/volksverhalenbank/lijst_lexicon.php?act=detail&volksverhaal_type=SINSAG%200162 Witte wieven volgens 't Meertens Instituut] (gearchiveerd)
 *[http://www.meteo-maarssen.nl/sage_004.html Sages over de witte wieven]
+*[http://archive.today/2013.01.12-015148/http://www.klap.net/verhalen/wittewieven.html De legende van de witte wieven] (gearchiveerd)
+*[https://web.archive.org/web/20061117222553/http://www.zwiep.dds.nl/fotos/zwiepseboli_800.jpg Foto van een wit wief in Zwiep] (gearchiveerd)
 
 {{Dia|Disse pagina is eschreven in 't [[Putters]]}}
 
-{{DEFAULTSORT:Witte Wieven}}
 [[Kategorie:West-Veluws_artikel]]
 [[Kategorie:Nedersaksiese mythologie]]
 [[Kategorie:Sage]]
