*Empty MediaWiki Message*

--- a/Salacious_Gods.mw
+++ b/Salacious_Gods.mw
@@ -1,19 +1,19 @@
-'''Salacious Gods''' is ne [[Dreante|Dreantse]] [[Metal (muziek)|Metalband]] oet [[Weiteveen|Weitevenne]]. Ze maakt [[black metal]] met tekstn in t [[Drèents|Dreants]] en [[Engels]]. Öare tekste goat heuwdzakelik oawer [[Babylon|Babelse]] goodn en [[antikristendom]].
+'''Salacious Gods''' is ne [[Dreante|Dreantse]] [[Metal (muziek)|Metalband]] uut [[Weiteveen|Weitevenne]]. Ze maakt [[black metal]] met teksten in et [[Drèents|Dreants]] en [[Engels]]. Öare teksten gåt heuvdzakelik oaver [[Babylon|Babelse]] goden en [[antikristendom]].
 
-Salacious Gods besteet seend [[1994]] en hef de volgende leedn:
-*Steakelhorn (zaank)
+Salacious Gods besteyt sind [[1994]] en hevt de volgende leeden:
+*Steakelhorn (zang)
 *Harfst-Ruus ([[gitaar]])
 *Iezelzweard (gitaar)
 *Nevelnoaste ([[basgitaar]])
 *Fjildslach ([[drumstel|tromset]])
 
-==Plaatnriege<ref>http://www.metal-archives.com/band.php?id=2843 Metal-archives.com - Salacious Gods. bekekn op 22-2-2011.</ref>==
+==Plaatenryge<ref>http://www.metal-archives.com/band.php?id=2843 Metal-archives.com - Salacious Gods. bekekn op 22-2-2011.</ref>==
 *''The Slumbering Silence'' (demo, [[1998]])
 *''Askengris'' ([[1999]])
 *''Sunnevot'' ([[2002]])
 *''Piene'' ([[2005]])
 
-==Oetgoande verbeendings==
+==Uutgånde verbindings==
 *[http://www.myspace.com/salaciousgods Öare stea op Myspace]
 *[https://www.facebook.com/Salacious-Gods-191247110953429/ Öare stea op Facebook]
 
