*Empty MediaWiki Message*

--- a/Salacious_Gods.mw
+++ b/Salacious_Gods.mw
@@ -1,7 +1,7 @@
-'''Salacious Gods''' is ne [[Dreante|Dreantse]] [[Metal (muziek)|Metalband]] uut [[Weiteveen|Weitevenne]]. Ze maakt [[black metal]] met teksten in et [[Drèents|Dreants]] en [[Engels]]. Öare teksten gåt heuvdzakelik oaver [[Babylon|Babelse]] goden en [[antikristendom]].
+'''Salacious Gods''' is ne [[Dreante|Dreantse]] [[Metal (muziek)|Metalband]] uut [[Weiteveen|Weitevenne]]. Se maakt [[black metal]] met teksten in et [[Drèents|Dreants]] en [[Engels]]. Öare teksten gåt heuvdzakelik oaver [[Babylon|Babelse]] goden en [[antikristendom]].
 
 Salacious Gods besteyt sind [[1994]] en hevt de volgende leeden:
-*Steakelhorn (zang)
+*Steakelhorn (sang)
 *Harfst-Ruus ([[gitaar]])
 *Iezelzweard (gitaar)
 *Nevelnoaste ([[basgitaar]])
