*Empty MediaWiki Message*

--- a/Vermont.mw
+++ b/Vermont.mw
@@ -35,6 +35,6 @@ In de sestiger jåren van de 20. eywe versköäv de oaverheyrsende politike klö
 
 In 2000 was Vermont den eyrsten amerikaansken ståt wår as homokoppels möchten trouwen. In 2011 en 2012 erkenden den ståt veer abenakistammen.
 
-{{Verienigde Staoten van Amerika}}
+{{Verenigde Staoten}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Verenigde Staoten]]
