Verwysing nå döärverwyssyde repareerd ([[Quebec]] nå [[Quebec (perveensie)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Vermont.mw
+++ b/Vermont.mw
@@ -15,7 +15,7 @@
 | ofkorting = VT
 }}
 
-'''Vermont''' is nen [[Verienigde Staoten van Amerika|amerikaansken ståt]]. Et ligt in nen noordousteliken uutlouper van et land, in de streake wat bekend steyr as [[New England|Ny Engeland]]. Up et süden grenset et an [[Massachusetts]], up et ousten an [[Nyhampshire]], up et westen an [[Nyjork (stat)|stat Nyjork]] en up et noorden an de [[Kanada|kanadeeske]] provincy [[Quebec]].
+'''Vermont''' is nen [[Verienigde Staoten van Amerika|amerikaansken ståt]]. Et ligt in nen noordousteliken uutlouper van et land, in de streake wat bekend steyr as [[New England|Ny Engeland]]. Up et süden grenset et an [[Massachusetts]], up et ousten an [[Nyhampshire]], up et westen an [[Nyjork (stat)|stat Nyjork]] en up et noorden an de [[Kanada|kanadeeske]] provincy [[Quebec (perveensie)|Quebec]].
 
 Up eynen stat nå woanet der in Vermont et minste antal lüde van de VS. Wat uppervlakde angeyt is et van alle 50 ståten den sesdekleinsten der af. De höyvdstad is [[Montpellier (Vermont)|Montpellier]], med et minste antal inwoaners van alle höyvdstäden. De drukste stad is [[Burlington]], al is dat ouk de minst drukke stad med de meyste inwoaners van nen ståt.
 
