--- a/Wyoming.mw
+++ b/Wyoming.mw
@@ -20,7 +20,7 @@
 
 Et westelike deyl van Wyoming wördt groutendeyls innöämen döär de [[Rocky Mountains]]. Et oustelike deyl is houglandprairie, wat de Hougvlakde nöömd wördt. Souwat de hälvde van et land wördt beheyrd döär de amerikaanske regeyring. Underdeyl van de federaal beheyrde landen sint twey natuurreservaten ([[Grand Teton]] en [[Yellowstone]]), twey untspanningsgebeden, twey nationale monumenten, verskillende nationale wolden, historisk belangryke steades, viskepaaieryen en beskütting vöär wilde deers.
 
-De oorsprungelike inwoaners van et gebeed sint under meyr de [[Arapaho]], [[Crow]], [[Lakota]] en [[Shoshone]]. Et süüdwesten van Wyoming wör eyrst upeysked döär et [[Keiserryk Spanje|spaanske keiserryk]]. Dårnå was et noch nen set deyl van [[Meksiko]]. In [[1848]] güng et oaver an de Vereynigde Ståten nå den [[Meksikaansk-Amerikaansken Oorlog]]. De name 'Wyoming' kreag et gebeed in [[1865]], do as et Nationaal Kungres ne regeyring vöär et gebeed wolde uprichten. De name was al eyrder gebröäken vöär et Wyomingdal in [[Pennsylvanie]] en is afleided van et [[Munsee (språke)|munsee]]-woord ''xwé:wamənk'', wat souvöäle bedüdet as "by de groute rivyrenvlakde".
+De oorsprungelike inwoaners van et gebeed sint under meyr de [[Arapaho]], [[Crow]], [[Lakota]] en [[Shoshone]]. Et süüdwesten van Wyoming wör eyrst upeysked döär et [[Keiserryk Spanje|spaanske keiserryk]]. Dårnå was et noch nen set deyl van [[Mexico (laand)|Meksiko]]. In [[1848]] güng et oaver an de Vereynigde Ståten nå den [[Meksikaansk-Amerikaansken Oorlog]]. De name 'Wyoming' kreag et gebeed in [[1865]], do as et Nationaal Kungres ne regeyring vöär et gebeed wolde uprichten. De name was al eyrder gebröäken vöär et Wyomingdal in [[Pennsylvanie]] en is afleided van et [[Munsee (språke)|munsee]]-woord ''xwé:wamənk'', wat souvöäle bedüdet as "by de groute rivyrenvlakde".
 
 Wat inkumsten angeyt müt Wyoming et vöäral hebben van turisme en et upgraeven van mineralen as [[koalen]], [[öäly]], [[aerdgas]] en trona (natriumhydrogeenkarbonaat). De buren doot der vöärnamelik med vey, [[heui|hoi]], [[sukerbeet|sükerbeten]], [[groan|grån]] ([[tarwe]] en [[garste]]) en wul. Wyoming hevt en halvverdröygd landklimaat. Et is der dröygerder en windiger as de rest van et land. Temperaturen loupet ouk starker uuteyne.
 
