--- a/Vermont.mw
+++ b/Vermont.mw
@@ -37,4 +37,4 @@ In 2000 was Vermont den eyrsten amerikaansken ståt wår as homokoppels möchten
 
 {{Verenigde Staoten}}
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Verenigde Staoten]]
+[[Kategorie:Verenigde Stoatn van Amerika]]
