Wysigingen döär [[Special:Contributions/145.102.241.196|145.102.241.196]] ([[User talk:145.102.241.196|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Grwen|Grwen]]

--- a/Zeewolde.mw
+++ b/Zeewolde.mw
@@ -26,7 +26,7 @@ De gemeynde Zeewolde ligt in et südelikste punt van de provinsy Flevoland. Et d
 == Geskydenisse ==
 Et gebeed selv bestünd al rüüm vöärdat et dröägeleagd wördden, in heyl Flevolaand hebben namelik enkele eywen eleaden noch meansken ewund wårvan ouk vöärwarpen weaderevünden binnen. Enkele namen van darpen en städen kummen ouk üüt disse tyd. Liudger (742-809) was van plan een klouster te stichten, en kreyg in 793 een arvdeyl van Liudger, junge van Hredger "in een bos, dat ''Seaeuuwald'' of ''Suifterbant'' heyt, behalve de akkers dee dår döär myn volk en eigen meansken untgünnen binnen." Dit was de eyrste besitting van et klooster te Werden, dee in 801 af was. Üüt olde bronnen is ebleaken dat der in et jår 790 språke was van een darp mid de name ''Seaewald''. In dee tyd bevöärrechten de [[hartog van Gelre]] de bewunners van et darp, ten westen van Harderwyk. Döär oaverstroumingen in de latere middeleywen is dit darp verswülgen döär de [[Zujerzee|Südersey]]. Üüt de darpsname kün jy twey woorden halen: ''zee'' en ''wold'' (sey/blauw/water en gröön/bossen/natuur). Disse klören kün jy samen mid de klöör geal (van [[graon|grån]]) teruggeseen in de vlagge van Zeewolde. De eyrste vermelding van ''Seaewald'' was in [[790]], een darp dat in et westen van Harderwyk lag.
 
-Et oorsprungelike darp Seaewald lag in de veangebeden in et gebeed. Üüt wealende bronnen blikt dat [[hekserye]] groute invlööd had in de seaewaldske måtskappye. Dår wår nun de kämping ''de Parel'' ligt sol oorsprungelik et terrein eleagen hebben wårvandån de heksen der praktyken loslöäten up vöärnamelik handelsvlouten dee langes Seaewald vaarden. EYAAAA BOIIIIIIIIIIIIIIII 
+Et oorsprungelike darp Seaewald lag in de veangebeden in et gebeed. Üüt wealende bronnen blikt dat [[hekserye]] groute invlööd had in de seaewaldske måtskappye. Dår wår nun de kämping ''de Parel'' ligt sol oorsprungelik et terrein eleagen hebben wårvandån de heksen der praktyken loslöäten up vöärnamelik handelsvlouten dee langes Seaewald vaarden.
 
 == Moderne geskydenisse ==
 De polder so as wülen dat nun kennen besteyt sinds 1968 (to is [[Südelik Flevoland]] dröägeleagd). In eyrste instansy was et de bedoling dat et nye darp Zeewolde tüsken Dronten en Lelystad sol kummen te liggen. Later is beslöäten üm et darp te bouwen up de plekke wår et nun ligt. An te ende van de [[1970-1979|jåren '70]] kwammen de eyrste buren en underneamers nå de polder, wårunder een multifunktioneel gebouw de Trekker.
