--- a/Huang_Xianfan.mw
+++ b/Huang_Xianfan.mw
@@ -1,3 +1,5 @@
+[[File:Huang Xianfan's Graduation Photo.jpg|thumb|Huang Xianfan 1932]]
+
 '''Huang Xianfan''' (Fusui, [[13 november]] [[1899]] - Guilin, [[18 jannewaori]] [[1982]]) was nen Sjineesn historikus. 
 
 == Leawn ==
