--- a/Urkers.mw
+++ b/Urkers.mw
@@ -4,10 +4,10 @@
 |'''Urker Wikipedie-logo'''
 |[[Ofbeelding:Wiki-drt-urs.png|Urker Wikipedie-logo]]
 |-
-|Nedersaksische naam  
+|Nedersaksische naam
 |Urkers
 |-
-|Nederlaandse naam 
+|Nederlaandse naam
 |Urkers (soms vernederlaandst tot ''Urks'')
 |-
 |Laand
@@ -24,11 +24,11 @@
 |-
 |Taolclassificaosie
 |
-*[[Indo-Europees]]  
-**[[Germaanse sproaken|Germaans]]  
-***[[West-Germaans]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaans]]
+***[[West-Germaans]]
 ****[[Nederduuts|Nederdeus]]
-****[[Nedersaksisch]] 
+****[[Nedersaksisch]]
 *****'''Urkers'''
 |-
 |Schrift
@@ -37,20 +37,20 @@
 |Taolstaotus
 |'t Urkers wort ezien as dialect van 't [[Nedersaksisch]]
 |-
-|Taolcode ISO 639-1  
+|Taolcode ISO 639-1
 |''gien'' 
 |-
-|Taolcode ISO 639-2  
+|Taolcode ISO 639-2
 |''gien''
 |-
-|Taolcode ISO 639-3/DIS 
+|Taolcode ISO 639-3/DIS
 |''gien'', mar ''urs'' is ereserveerd
 |}
 [[Ofbeelding:Urkers.png|thumb|250px|'t Taolgebied van 't Urkers in [[Flevolaand]]]]
 
 't '''Urkers''' is een [[Nedersaksisch]] [[dialekt|dialect]] dat op [[Urk]] espruken wort. 't Beoort mit 't [[Eemlangds|Eemlaands]] in 't [[West-Veluws]] tot 't overgangsgebied tussen 't [[Nedersaksisch]] in 't [[Nederfrankisch]], mar wort over 't algemien erekend tot 't [[Nedersaksisch]]. Dit wil zeggen dat er in 't Urkers zowel kinmarken van de westelijke (Hollaandse) dialecten as de oostelijke (Nedersaksische) dialecten terogge-evoenden kunen worren. Ok 't Fries, 't [[Frans|Fraans]] in 't [[Amsterdams]] (Joos) eawen 't dialect direct of indirect beïnvloed. 't Dialect is ondanks disse verwaantskappen uniek van karakter, voral vanwege de isolatie as vuurmaolig eilaand. Sinds de laote niegentiende ieuw eawen vuul taolwietenskappers eurlui ermie biezigouwen. 't Urkers beoort tot ien van de levendigste dialecten van [[Nederlaand]].
 
-'t Urkers kan ok erekend worren tot 't [[Friso-Franko-Saksisch]], een speciaole groep vor taolen die tussen 't [[Fries]], [[Nederfrankisch]] in 't [[Nedersaksisch]] vallen, waor  voral 't Urkers onger valt.
+'t Urkers kan ok erekend worren tot 't [[Friso-Franko-Saksisch]], een speciaole groep vor taolen die tussen 't [[Westlaauwers Frais|Fries]], [[Nederfrankisch]] in 't [[Nedersaksisch]] vallen, waor  voral 't Urkers onger valt.
 
 ==Kinmarken==
 De ouwe discussie got erover of 't Urkers een [[Frankisch]] of een [[Saksisch]] [[dialekt|dialect]] is. Angere indielingen worren zo nou in dan ok gebrukt. Saksische illeminten binnen 't zwakke vuurvoegsel ''e-'' in plaats van ''ge-'' in voltooide dielwoorden (''ewarrekt''), de verkleuring van  de ''aa'' nor de ''ao'' in de duidelijke eutspraak van de ''-n''. Typisch Frankisch is 't ieneidsmaarvoud op ''-en'' (in niet op ''-t''; ''wij warreken''). [[Umlaut]] in verkleanwoorden komt vuur, mar niet as riegel.
@@ -67,7 +67,7 @@ De woordenskat van 't Urkers kint vuul woorden die typisch vor de [[Iesselmeer|I
 
 ==Dialectgebruk==
 [[Ofbeelding:Urk_harbor.jpg|thumb|left|Urkers praoten ze teus, op 't wark, op straot]]
-Arg waorskeenlijk is 't Urkers 't miest levendige dialect in iel [[Nederlaand]]. Omdat Urk een arg echte gemienskap is mit weanig import sprikt zo goed as iederiene 't dialect nog onger eenkanger. Bovendien echt de Urker over 't algemien iel vuul an zien dialect. Dit zurgt ervor dat nog 97% van de Urker bevolking 't Urkers kan praoten, ouweren net zo vuul as jongeren. Bovendien gebrukken ze 't in alle informele situaties: teus, op 't wark, op straot in in eurluiers vrije teed. Soms wort 't zelfs tugen vreemden gebrukt, ok in Urker gemienskappen beuten 't durp, bijvuurbield in [[Tollebeek]] (gemiente [[Noordoostpolder]]). Allien in formele situaties (op skoel, in de kark) praoten ze [[Nederlaands]], 't Urkers wort dan wier wel vaak gebrukt in [[vergaorige|vergaoderingen]] in bijienkomsten. Een antal Urkers kunen eurluiers dialect ok skreven; dit doen voral jongeren in [[chatbox]]en. Ierbij worren de miest exotische skreefwezen gebrukt. 
+Arg waorskeenlijk is 't Urkers 't miest levendige dialect in iel [[Nederlaand]]. Omdat Urk een arg echte gemienskap is mit weanig import sprikt zo goed as iederiene 't dialect nog onger eenkanger. Bovendien echt de Urker over 't algemien iel vuul an zien dialect. Dit zurgt ervor dat nog 97% van de Urker bevolking 't Urkers kan praoten, ouweren net zo vuul as jongeren. Bovendien gebrukken ze 't in alle informele situaties: teus, op 't wark, op straot in in eurluiers vrije teed. Soms wort 't zelfs tugen vreemden gebrukt, ok in Urker gemienskappen beuten 't durp, bijvuurbield in [[Tollebeek]] (gemiente [[Noordoostpolder]]). Allien in formele situaties (op skoel, in de kark) praoten ze [[Nederlaands]], 't Urkers wort dan wier wel vaak gebrukt in [[vergaorige|vergaoderingen]] in bijienkomsten. Een antal Urkers kunen eurluiers dialect ok skreven; dit doen voral jongeren in [[chatbox]]en. Ierbij worren de miest exotische skreefwezen gebrukt.
 
 Wannaar d'r vreemden bij binnen wort soms over-eskakeld nor 't Nederlands. As de vreemden bekint binnen mit 't Urkers blift 't dan gewoen de voertaol. Vereusde Urkers bleven 't dialect nog lange onger eenkanger gebrukken. Sinds de [[Tweede Wereldoorlog|Twiede Warreldoorlog]] wort d'r vrij riegelmaotig in eskrieven. D'r binnen ongermaar [[Biebel]]fragminten in 't Urkers vertaold. Ongerangere 't boek van de Psalmen, Job, Jona in is d'r een gezangbundel mit psalmen in liederen in 't Urkers verskienen. De zangbundel wort gebrukt in de jaorlijkse vespdienst in 't Karkien an de Zie, waor 't Urkers in de dienst dan de ienige voertaol is in woord in gebed. In de reguliere kark wort soms een stukkien in 't Urkers eut de Biebel eliezen of een lied in 't Urkers vuur-eliezen. Mar varder wort 't Urkers in 't orthodoxe durp niet in de kark gebrukt. Inkelen zien 't as te 'gewoen' of 'te plat' om 't te gebrukken in de aredienst. Angeren venen 't te direct. Mar de vesperdienst in 't Urkers zit altoos stampvol.
 
@@ -112,7 +112,7 @@ Amen
 
 '''
 ==Veraol: "De pas van Klaos"==
-'t Veraol wat ik jelui nou wil doen is echt gebeurd en voend allef in de jaoren tachtig van de vurige ieuw plaos. Wai visten zoas gewoen in de zoemermoonden om de noord en avenden daoromme in Ansolm, ielemaol in 't noorden van Denemarken. We wazzen viertien dagen van eus in daornao un lang weekend op Urk. Vor iene die net etrouwd is gien pretjen, mar 't wierzien was dan ok apart fain, mar dat effien terzede. Suundes saves om twaolf uur sting 't bussien wier te toeten vor de duur en mozzen we de barre reaze wier anvaorden nor boord, een rit van een uur of niegene, tiene. Ik voer toen mit een vraigezel, die om 't zo mar te zeggen, graag een bietjen luste. Nou is dat gien ramp want dat lusten de mieste minsen die ik kin wel. Varder was er niks op Klaos an te marken, ai woende bai zun ouwe mimme en zörgde goed vor 't ouwe mins. Mar op een keer was Klaos arges bleven plakken, in, je begrepen 't wel, 't was un bietjen laoter dan normaol eworren. Om veef vor twaoleven was ie er bientjen over in koemen zealen in ad gaauw z'n spulletjes bai eenkanger egriepen vordat 't bussien kwam. 
+'t Veraol wat ik jelui nou wil doen is echt gebeurd en voend allef in de jaoren tachtig van de vurige ieuw plaos. Wai visten zoas gewoen in de zoemermoonden om de noord en avenden daoromme in Ansolm, ielemaol in 't noorden van Denemarken. We wazzen viertien dagen van eus in daornao un lang weekend op Urk. Vor iene die net etrouwd is gien pretjen, mar 't wierzien was dan ok apart fain, mar dat effien terzede. Suundes saves om twaolf uur sting 't bussien wier te toeten vor de duur en mozzen we de barre reaze wier anvaorden nor boord, een rit van een uur of niegene, tiene. Ik voer toen mit een vraigezel, die om 't zo mar te zeggen, graag een bietjen luste. Nou is dat gien ramp want dat lusten de mieste minsen die ik kin wel. Varder was er niks op Klaos an te marken, ai woende bai zun ouwe mimme en zörgde goed vor 't ouwe mins. Mar op een keer was Klaos arges bleven plakken, in, je begrepen 't wel, 't was un bietjen laoter dan normaol eworren. Om veef vor twaoleven was ie er bientjen over in koemen zealen in ad gaauw z'n spulletjes bai eenkanger egriepen vordat 't bussien kwam.
 
 Klaos ding een greep in 't kässien om z'n paspoort te pakken in gelik worde er etoet. "Skiet op oenze Klaos, ze binnen der al, un goeie reaze zuun in doen vorzigtig an", zeen z'n mimme. "Genagt mimme", riep Klaos, skeut zun klompen an en vleug de duur eut naodat ie 't ouwe mins gank een poes egeven ad. De reaze verliep vorspoedig, ai ding un lekker knippien in 't bussien en skeut wakker toen ze al an de Deense grins stingen, ze wazzen dus al een lekker indjen op weg. Mar toen gebeurde 't; de passen mozzen tevuurskeen koemen in worden duur egieven nor de cheffeur die ze op z'n beurt an de douanebeampte gaf. De man bekiek ze iene vor iene, zeen niks mar pakte z'n zoeklicht in skien toen nor binnen om al die snuten te bekieken. Toen vroeg ie an de cheffeur waor of die vrouwe mit dat raore ding op er oofd nou eagelijk was… De skrik sloeg Klaos om z'n arte, want er ging um een liggien branen. En inderdaod: op z'n pas sting gien foto van umzelf, mar van z'n ouwe mimme! Ai ad in z'n aost de pas van ouwe Jaauwkien mie-egriepen in plaos van z'n eagen.  Wat of ze ok zenen tugen de beampte, er was gien praoten tugen, Klaos kwam de grins niet over. In 't eande van 't veraol was dat ie op z'n ientjen mit een taxi terogge nor Urk kon in z'n maos mit z'n veven varder nor Ansolm. Of ie an de Deuse grins ok nog controliert worde durf ik niet te zeggen. Afain, Klaos z'n week zat er op in 't koste um ok nog een lekker klirtjen geld. De meraol van dit veraol is, in dat eaw ik van een ouwe visserman elaard: acht is maar dan duzend in daor zullen we 't dan maar op ouwen.
 
