Verwysing nå döärverwyssyde repareerd ([[Fries]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Ooststellingwarf.mw
+++ b/Ooststellingwarf.mw
@@ -16,7 +16,7 @@ lengtegraod = 6/18//E |
 verkeersaoder = N381, N351, N380 |
 netnummer = 0516 |
 postkode = 8421 - 8435 |
-webstee = [http://www.ooststellingwerf.nl www.ooststellingwerf.nl] |
+webstee = [http://www.ooststellingwerf.nl/ www.ooststellingwerf.nl] |
 }}
 '''Ooststellingwarf''' (ok wel: ''Stellingwarf-Oostaende'') is een [[gemiente (bestuur)|gemiente]] in de [[perveensie]] [[Frieslaand]]. De gemiente had op [[1 mei]] [[2014]] 25.696 inwoners (bron: CBS) en het een oppervlakte van 224,16 [[vierkaante kilometer|km²]].
 
@@ -136,7 +136,7 @@ Op [[1 mei]] [[2013]] woonden 25.754 meensken in de gemiente Ooststellingwarf. D
 * [[1714]] - 1.766
 
 ===Taelverhooldingen===
-Veur et gebruuk van et [[Stellingwarfs]], [[Fries]] en [[Nederlaans]] bin d'r in et vleden verschillende onderzuken of onderzukies daon. De eerste wodde deur de schriever [[Hendrik Johannes Bergveld|H.J. Bergveld]] in 1949 publiceerd. Hi'j hadde bi'j alle schoelen in de gemiente Oost-Stellingwarf een onderzuuk insteld naor de tael of et dialekt, dat doe deur de jeugd as thuustael praot wodde. Zien vraogen gongen naor 1281 huusholdings, waorvan doe nog 693 of ruum 64% et Stellingwarfs as thuustael hadde. In 530 of 41% Fries en 58 of 5% Nederlaans. Neffens Bergveld wonen de meerste niet-Stellingwarfstaeligen, doe meerstal de Friestaeligen, in de dörpen Donkerbroek, Haulerwiek en Appelsche (Waskemeer wodde in dit verhael niet nuumd). Uut zien onderzuuk komt naor veuren dat van de 573 huusholdings in disse dörpen mar 136 of 22% thuus Stellingwarfs praoten, in 411 gezinnen of 70% van de huusholdings wodde et Fries as spreektael bruukt. De ere dörpen weren nog wel veur een groot diel Stellingwarfstaelig en et percentaoge Stellingwarfs en Fries praotenden is daor respektivelik ok ongeveer 80% en 15%.
+Veur et gebruuk van et [[Stellingwarfs]], [[Westlaauwers Frais|Fries]] en [[Nederlaans]] bin d'r in et vleden verschillende onderzuken of onderzukies daon. De eerste wodde deur de schriever [[Hendrik Johannes Bergveld|H.J. Bergveld]] in 1949 publiceerd. Hi'j hadde bi'j alle schoelen in de gemiente Oost-Stellingwarf een onderzuuk insteld naor de tael of et dialekt, dat doe deur de jeugd as thuustael praot wodde. Zien vraogen gongen naor 1281 huusholdings, waorvan doe nog 693 of ruum 64% et Stellingwarfs as thuustael hadde. In 530 of 41% Fries en 58 of 5% Nederlaans. Neffens Bergveld wonen de meerste niet-Stellingwarfstaeligen, doe meerstal de Friestaeligen, in de dörpen Donkerbroek, Haulerwiek en Appelsche (Waskemeer wodde in dit verhael niet nuumd). Uut zien onderzuuk komt naor veuren dat van de 573 huusholdings in disse dörpen mar 136 of 22% thuus Stellingwarfs praoten, in 411 gezinnen of 70% van de huusholdings wodde et Fries as spreektael bruukt. De ere dörpen weren nog wel veur een groot diel Stellingwarfstaelig en et percentaoge Stellingwarfs en Fries praotenden is daor respektivelik ok ongeveer 80% en 15%.
 
 In 2011 wodde deur de [[Frieslaand|Perveensie Fryslân]] een quick-scan holden. Doe praotte in Oost-Stellingwarf nog 11% Stellingwarfs, 39% Fries en 50% Nederlaans. Hierdeur kan dus vaastesteld wodden dat de gemiente in de laeste vuuftig jaor meer an et vernederlaansen dan an et verfriesen is. Uut een taeltelling uut 2005, daon deur [[Henk Bloemhoff]], is niet de thuustael onderzocht, mar hoe goed meensken et Stellingwarfs praoten kunnen. Daoruut doet blieken dat haost de helft van de ienwoners van Oost-Stellingwarf, zo'n 48,9%, et Stellingwarfs redelik tot goed praoten kunnen. Echter, de Stellingwarfstaeligen in zowel Oost-Stellingwarf as in West-Stellingwarf bin veur een groot diel ooldere meensken.<ref>[http://www.frieschdagblad.nl/index.asp?artID=55406 Pieter Jonker niet somber over Stellingwerfs] artikel in 't Friesch Dagblad van 1 juli 2011</ref> 
 
