Verwysing nå döärverwyssyde repareerd ([[Fries]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Et_Bildt.mw
+++ b/Et_Bildt.mw
@@ -18,7 +18,7 @@ netnummer = 0518 |
 postkode = 9047, 9074 - 9079 |
 webstee = [http://www.hetbildt.nl www.hetbildt.nl] |
 }}
-'''Et Bildt''' ([[Nederlaans]]: ''Het Bildt''; [[Bildts]]: '' 't Bildt''; [[Fries]]: ''It Bilt'') is een vroggere [[gemiente (bestuur)|gemiente]] en een [[Nederlaand|Nederlaanse]] laandstreek in de perveensie [[Frieslaand]] mit as heufdplak [[Sunt Anneperochie]]. Et had op 1 meie 2014 10.657 inwoners en leit an de [[Waddenzee]] mit 15,4 km kust.
+'''Et Bildt''' ([[Nederlaans]]: ''Het Bildt''; [[Bildts]]: '' 't Bildt''; [[Westlaauwers Frais|Fries]]: ''It Bilt'') is een vroggere [[gemiente (bestuur)|gemiente]] en een [[Nederlaand|Nederlaanse]] laandstreek in de perveensie [[Frieslaand]] mit as heufdplak [[Sunt Anneperochie]]. Et had op 1 meie 2014 10.657 inwoners en leit an de [[Waddenzee]] mit 15,4 km kust.
 
 De naeme "Et Bildt" komt van ''opgebild'', wat ''opslibd'' betekent.
 
@@ -30,7 +30,7 @@ De bodem ([[zeeklei]]) is slim vruchtber, en et gebied leeft van laandbouw; veur
 De vroggere gemiente Et Bildt het zes officiële dörpen. De Nederlaanse naemen bin de officiële. In et pooldergebied van Et Bildt wodt gien [[Westlaauwers Frais|Fries]], mar [[Bildts]] praot. Disse tael is ontstaon deur verminging van de [[Zuud-Hollaand|Zuud-Hollaanse]] dialekten van de poolderbewoners mit et Fries van de omliggende gebieden. Allienig in et dörp Minnertsge, dat niet in et pooldergebied leit, en pas sund de gemientelike herindieling van [[1984]] tot de gemiente Et Bildt beheurt, wodt Fries praot. De gemiente het wel keuzen veur twietaelige plaknaembodden, mar onder de Nederlaanse naeme van de poolderdörpen staot de Bildtse vertaeling vermeld in plak van de Friese. 
 
 ===Dörpen===
-Antal inwoners per woongebied op 1 jannewaori 2010<ref name="CBS" />: 
+Antal inwoners per woongebied op 1 jannewaori 2010<ref name="CBS">Bron: Centraal Bureau voor de Statistiek</ref>:
 {| class="toccolours" style="margin: 0em 0em;"
 |'''Stellingwarfse naeme'''||'''''Bildtse naeme'''''||'''''Nederlaandse naeme'''''||'''Antal'''
 |-
@@ -55,9 +55,7 @@ Antal inwoners per woongebied op 1 jannewaori 2010<ref name="CBS" />:
 *[http://www.nij-altoenae.nl/ Ni'j Altena]
 
 == Referenties ==
-<references>
-<ref name="CBS">Bron: Centraal Bureau voor de Statistiek</ref>
-</references>
+<references/>
 
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Vroggere gemiente in Frieslaand]]
