Verwysing nå döärverwyssyde repareerd ([[Fries]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Ni'jeferd.mw
+++ b/Ni'jeferd.mw
@@ -16,9 +16,9 @@ lengtegraod = 5.45 |
 verkeersaoder = N359 |
 netnummer = 0514, 0515 |
 postkode = 8584, 8711 - 8779 |
-op-egaon = [[Zuudwest-Frieslaand]] |
+op-egaon = [[Zuudwest-Frieslaand]]
 }}
-'''Ni'jeferd''' ([[Nederlaands|Nederlaans]]/[[Fries]]: ''Nijefurd'', {{Audio|458_Nijefurd.ogg|<small>uutspraoke</small>}}) is een veurmaolige [[gemiente (bestuur)|gemiente]] in de Nederlaanse perveensie [[Frieslaand]].
+'''Ni'jeferd''' ([[Nederlaands|Nederlaans]]/[[Westlaauwers Frais|Fries]]: ''Nijefurd'', {{Audio|458_Nijefurd.ogg|<small>uutspraoke</small>}}) is een veurmaolige [[gemiente (bestuur)|gemiente]] in de Nederlaanse perveensie [[Frieslaand]].
 
 Ni'jeferd is op [[1 jannewaori]] [[2011]] opgaon in de ni'je perveensie [[Zuudwest-Frieslaand]]. Bi'j n eerdere gemientelike herindieling in [[1984]] is t vormd deur de fusie mit een groot diel van de veurmaolige gemiente [[Hemelumer Ooldeferd]] en de statties [[Workum]], [[Hindeloopen]] en [[Stavoren]]. 
 
@@ -54,7 +54,7 @@ Antal inwoners per woongebied op [[1 jannewaori]] [[2004]]:
 |-
 |[[Ni'jhuzum]]||''Nijhuzum''||ALIGN="right"|40
 |}
-<small>Bron: CBS</small><br />
+<small>Bron: CBS</small>
 
 '''*''' Gien officiële plak binnen de gemiente
 
