Verwysing nå döärverwyssyde repareerd ([[Fries]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Stellingwarver_taelwiezer.mw
+++ b/Stellingwarver_taelwiezer.mw
@@ -608,7 +608,7 @@ Friese woorties die vaeke/daegeliks in et Stellingwarfs wodden bin:
 {| class="wikitable"
 !colspan="16"|'''Overienkomsten tussen et Stellingwarfs en et Fries'''
 |-
-|'''[[Fries]]'''&nbsp;||'''Stellingwarfs'''''&nbsp;||'''[[Nederlaans]]'''
+|'''[[Westlaauwers Frais|Fries]]'''&nbsp;||'''Stellingwarfs'''''&nbsp;||'''[[Nederlaans]]'''
 |-
 |likegoed||liekegoed||evengoed, zowel
 |-
