Verwysing nå döärverwyssyde repareerd ([[Fries]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Riesberkaampen.mw
+++ b/Riesberkaampen.mw
@@ -1,4 +1,4 @@
-'''Riesberkaampen''' ([[Nederlaands|Nederlaans]]: ''Rijsberkampen'', [[Fries]]: ''Rysberkampen'') is een [[buurtschop]] in et [[Weststellingwarf]]se dörp [[Buil]]. Et bestaot lichtkaans al langer as veur [[1850]], doe beston d'r een ''meulepolle'' inkelde huzen en [[boerderieje|boerderi'jen]] en had omdebi'j 60 inwoners. Et buurtschop het zien naeme te daanken an ''Van der Aa Riseperkampen ''.
+'''Riesberkaampen''' ([[Nederlaands|Nederlaans]]: ''Rijsberkampen'', [[Westlaauwers Frais|Fries]]: ''Rysberkampen'') is een [[buurtschop]] in et [[Weststellingwarf]]se dörp [[Buil]]. Et bestaot lichtkaans al langer as veur [[1850]], doe beston d'r een ''meulepolle'' inkelde huzen en [[boerderieje|boerderi'jen]] en had omdebi'j 60 inwoners. Et buurtschop het zien naeme te daanken an ''Van der Aa Riseperkampen ''.
 
 {{Weststellingwarf}}
 
