Verwysing nå döärverwyssyde repareerd ([[Fries]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Beulaeke.mw
+++ b/Beulaeke.mw
@@ -1,7 +1,7 @@
 '''Beulaeke''' of '''Beulake''' was een dörp dat bestond vanof begun [[15e eeuw]] töt [[1776]] in de [[Kop van Overiessel]], ongeveer ten noordoosten van [[Et Klooster]] en ten noordwesten van [[Ronduite]]. Et dörp is deur stormvloed in 1776 verdrunken in wat now de [[Beulakerwiede]] het.
 
 ==Naeme==
-De naeme is of-eleid van Bodelaecke, waorvan ''bode'' verwant is mit et [[Duuts|Duutse]] ''Bude'' (stal), et [[Fries|Friese]] ''bode'' (schure) en et [[Nedersaksisch|Nedersaksische]] ''boô'', een hut veur koenen of schaopen; een ''laecke'' is een moerassig gebied.
+De naeme is of-eleid van Bodelaecke, waorvan ''bode'' verwant is mit et [[Duuts|Duutse]] ''Bude'' (stal), et [[Westlaauwers Frais|Friese]] ''bode'' (schure) en et [[Nedersaksisch|Nedersaksische]] ''boô'', een hut veur koenen of schaopen; een ''laecke'' is een moerassig gebied.
 
 ==Ontstaon en gruui==
 In de beguntied was Beulaeke een buurtschop mit een paer huzen, waorschienlijk bewoond deur [[vene (grondsoorte)|veenarbeiders]]. Ok in et laetere Beulaeke haj veurnaemelik intensieve [[törf|törfwinning]]. Et dörp kwam töt staand langes een wat hoger elegen pad - et Beulaekerpad. Daorlanges wodden huzen ebouwd; de törfstikkers kregen de törf direkt achter et huus weg. Disse wodden of-evoerd via een paer kenalen, waoronder de Arembergergracht die now nog zudelk richting [[De Sluus]] löp. Via de haven van [[Blokziel]] en laeter De Sluus wodden de törf over de [[Zuderzee]] of-evoerd naor Amsterdam en doar verkocht. Van 1650 töt 1751 gruuide et dörp uut töt 45 volweerdige woningen mit 247 bewoners.
