Verwysing nå döärverwyssyde repareerd ([[Freesk]] nå [[Freeske taaln]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Oostlaauwers_Frais.mw
+++ b/Oostlaauwers_Frais.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:OosterlauwersFries in hedendaagse gebieden.PNG|right|300px|thumbnail|t Vrougere toalgebied van t Oostlaauwers Frais; de rode lien is de schaaiden tuzzen t Ems- en t Wezerfrais, môr ook tuzzen de tegenswoordege dialekten Grunnegs-Oostfrais en Oldenbörgs]]
-t '''Oostlaauwers Frais''' of gewoon '''Oost Frais''' (in t [[Selterfrais]]: ''Aast-Fräisk'') is n [[Freesk|Fraise]] toal dij proat wuir in t haile gebied tuzzen [[Laauwers]] en [[Ems (revier)|Ems]]. De benoamen ''Oost Frais'' mout nait verward worden mit ''Oostfrais'', wat t [[Oostfrais Leegsaksisch]] aanduudt. Noudoags wordt der allend in de Duutse gemainte [[Selterlaand]] nog Oostlaauwers Frais proat, woardeur t overbliefsel ook wel [[Selterfrais]] nuimd wordt.
+t '''Oostlaauwers Frais''' of gewoon '''Oost Frais''' (in t [[Selterfrais]]: ''Aast-Fräisk'') is n [[Freeske taaln|Fraise]] toal dij proat wuir in t haile gebied tuzzen [[Laauwers]] en [[Ems (revier)|Ems]]. De benoamen ''Oost Frais'' mout nait verward worden mit ''Oostfrais'', wat t [[Oostfrais Leegsaksisch]] aanduudt. Noudoags wordt der allend in de Duutse gemainte [[Selterlaand]] nog Oostlaauwers Frais proat, woardeur t overbliefsel ook wel [[Selterfrais]] nuimd wordt.
 
 == Toalgebied == 
 t Wuir sproken tuzzen de rivieren de [[Laauwers]] en de [[Wezer]]. t Gong om volgende gebieden:
