Verwysing nå döärverwyssyde repareerd ([[Oostfries]] nå [[Oostfreisk Nederduutsk]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -230,7 +230,7 @@ Staand van veur 1945]]
 
 Vanwegen de grote verspreiding van et Nedersaksisch (eertieds van [[Palanga|Nimmersatt]] tot [[Bunsjoten|Bunschoten]] an toe) bin der verschillende dialektvariaanten ontstaon, die'j roewweg in twee heufdgroepen in kunnen delen: 
 #t [[West Leegsaksisch (algemain)|West-Nedersaksisch]] (Nederlaand en Noordwest-Duutslaand)
-##t [[Noord Leegsaksisch|Noord-Nedersaksisch]] ([[Grönnegs|Gronings]] en [[Noord-Drèents|Noord-Drents]], [[Oostfries]], [[Noord-Oldenbörgs]], [[Zuud-Oldenbörgs]], [[Onderelfs]], [[Holsteens]], [[Sleeswieks]] en [[Eemslenner Plat|Noord-Eemslaands]])
+##t [[Noord Leegsaksisch|Noord-Nedersaksisch]] ([[Grönnegs|Gronings]] en [[Noord-Drèents|Noord-Drents]], [[Oostfreisk Nederduutsk|Oostfries]], [[Noord-Oldenbörgs]], [[Zuud-Oldenbörgs]], [[Onderelfs]], [[Holsteens]], [[Sleeswieks]] en [[Eemslenner Plat|Noord-Eemslaands]])
 ##t [[Westfaols]] ([[Achterhooks]], [[Sallaands]], [[Zuud-Drèents|Zuud-]] en [[Midden-Drèents|Midden-Drents]], [[Stellingwarfs]], [[Tweants|Twents]], [[Urkers]], [[Veluws]], [[Westerwoolds|Westerwolds]], [[Graofschopper plat|Bentumers]], [[Eemslenner Plat|Zuudwest-Eemslaands]], [[Oost-Westfaols]], [[Zuud-Westfaols]], [[Munsterlaands]], [[West-Munsterlaands]])
 ##t [[Oostveels]]
 #t [[Oost Leegduuts|Oost-Nedersaksisch]] (Noordoost-Duutslaand)
